--- a/assets/stylesheets/homepage.css
+++ b/assets/stylesheets/homepage.css
@@ -6,6 +6,7 @@
     font-family: "Poppins";
     src: url("../fonts/Poppins-Regular.ttf") format("truetype");
   }
+  
 body {
     font-family: "Poppins"
 }
@@ -105,3 +106,61 @@ width: 40px;
   .follow-us-text {
     color: black;
   }
+  @media only screen and (max-width: 600px) {
+    header {
+      height: 110px;
+    }
+    .horizontal-nav {
+       display: none;
+     }
+    .main-container {
+      border-top: 1px solid black;
+      padding-top: 30px;
+    }
+    header a.logo {
+      display: none;
+    }
+ }
+ 
+
+.dropdown {
+  position: relative;
+  display: block;
+  width: auto;
+  height: 25px;
+}
+.dropbtn {
+  position: absolute;
+  display: block;
+  width: auto;
+  height: 40px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1;}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: #ffffff;
+}
+ 
