--- a/assets/stylesheets/homepage.css
+++ b/assets/stylesheets/homepage.css
@@ -27,12 +27,13 @@ h1 {
 header a.logo {
     transition: all 0.5s ease;
     display: block;
-    width: 170px;
-    height: 100px;
+    width: 180px;
+    height: 50px;
     /* change dish-01.png to your loge image */
-    background: url(../images/Logo@3x.png) no-repeat 0 0;
+    background: url(../images/worm-logo.png) no-repeat 0 0;
     background-size: contain;
     margin: auto; 
+    margin-top:15px; 
   }
   
   .horizontal-nav {
@@ -83,7 +84,6 @@ width: 40px;
   }
   .footer-link-container {
     width: 30%;
-   
     padding-top: 40px;
   }
   .footer-link-container a {
@@ -106,6 +106,7 @@ width: 40px;
   .follow-us-text {
     color: black;
   }
+  /* header and nav */
   @media only screen and (max-width: 600px) {
     header {
       height: 110px;
@@ -120,8 +121,13 @@ width: 40px;
     header a.logo {
       display: none;
     }
+    h1 {
+      padding-top:40px;
+    }
+
  }
- 
+ /* Dropdown menu active */
+ @media only screen and (max-width: 600px) {
 
 .dropdown {
   position: relative;
@@ -139,6 +145,8 @@ width: 40px;
 }
 
 .dropdown-content {
+  width: 100%;
+  top: 52px;
   display: none;
   position: absolute;
   background-color: #f9f9f9;
@@ -163,4 +171,101 @@ width: 40px;
 .dropdown:hover .dropbtn {
   background-color: #ffffff;
 }
+}
+/* dropdown menu hidden */
+@media only screen and (min-width: 600px) {
+
+  .dropdown {
+    display: none;
+  }
+  .dropbtn {
+    display: none;
+  }
+  
+  .dropdown-content {
+    display: none;
+  }
+  
+  .dropdown-content a {
+    display: none;
+  }
+  
+  .dropdown-content a:hover {background-color: #f1f1f1;}
+  
+  .dropdown:hover .dropdown-content {
+    display: none;
+  }
+  
+  .dropdown:hover .dropbtn {
+    background-color: #ffffff;
+  }
+  }
+  /* Footer */
+  @media only screen and (max-width: 400px) {
+    .footer-content {
+      display: flex;
+      flex-direction:column;
+      justify-content: space-between;
+      align-content: center;
+      margin: 0px 20px;
+      text-align: center;
+    }
+    .social-icon-container a img {
+      height: 40px;
+      width: 40px;
+    }
+    .social-icon-container a {
+      text-decoration: none;
+      text-align:center;
+      margin: auto;
+    }
+  
+    .social-icon-container {
+      order: 1;
+      text-align:center;
+      /* position:relative; */
+      /* left: 0; */
+      /* right: 0; */
+      /* margin: 0 0 20px 0; */
+      /* width: 100%; */
+      padding-bottom: 10px;
+      margin: auto;
+      width: 50%;
+    }
+    .social-media-icons{
+      display:inline-flex;
+    }
+    .footer-link-container {
+      order: 2;
+      display: flex;
+      flex-direction:column;
+      width: 50%;
+      margin: auto;
+      padding-bottom: 10px;
+      padding-top:0px;
+    }
+    .footer-link-container a {
+      text-decoration: none;
+      color:#000000;
+      padding-right: 10px;
+      
+     
+    }
+   .copyright-container {
+      order: 3;
+      width: 50%;
+      margin: auto;
+   
+   }
+    .copyright-container a {
+      text-decoration: none;
+      color: black;
+      float: right;
+      padding-top: 0px;
+    }
+    .follow-us-text {
+      color: black;
+    }
+
+ }
  
