--- a/assets/stylesheets/monthlyhighlights.css
+++ b/assets/stylesheets/monthlyhighlights.css
@@ -70,6 +70,14 @@ header a.logo {
   .main-container {
     margin: 25px 20px;
     display: flex;
+    flex-direction: column;
+  }
+  .page-title {
+    Width: 100%;
+    padding-bottom: 20px;
+  }
+  .highlights{
+    display:flex;
   }
   .hero-image {
     width:100%;
@@ -164,3 +172,232 @@ width: 40px;
     width: 150px;
     height:200px; 
   }
+
+/* header and nav */
+@media only screen and (max-width: 600px) {
+  header {
+    height: 110px;
+  }
+  .horizontal-nav {
+     display: none;
+   }
+  .main-container {
+    border-top: 1px solid black;
+    padding-top: 30px;
+  }
+  header a.logo {
+    display: none;
+  }
+  h1 {
+    padding-top:40px;
+  }
+
+}
+/* Dropdown menu active */
+@media only screen and (max-width: 600px) {
+
+.dropdown {
+position: relative;
+display: block;
+width: auto;
+height: 25px;
+}
+.dropbtn {
+position: absolute;
+display: block;
+width: auto;
+height: 40px;
+border: none;
+cursor: pointer;
+}
+
+.dropdown-content {
+width: 100%;
+top: 52px;
+display: none;
+position: absolute;
+background-color: #f9f9f9;
+min-width: 160px;
+box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+z-index: 1;
+}
+
+.dropdown-content a {
+color: black;
+padding: 12px 16px;
+text-decoration: none;
+display: block;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1;}
+
+.dropdown:hover .dropdown-content {
+display: block;
+}
+
+.dropdown:hover .dropbtn {
+background-color: #ffffff;
+}
+}
+/* dropdown menu hidden */
+@media only screen and (min-width: 600px) {
+
+.dropdown {
+  display: none;
+}
+.dropbtn {
+  display: none;
+}
+
+.dropdown-content {
+  display: none;
+}
+
+.dropdown-content a {
+  display: none;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1;}
+
+.dropdown:hover .dropdown-content {
+  display: none;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: #ffffff;
+}
+}
+
+/* Monthly Highlights Section */
+@media only screen and (max-width:600px) {
+  .main-container {
+    margin: 25px 20px;
+    display: flex;
+    flex-direction: column;
+  }
+  h2 {
+    padding-bottom: 0px;
+    padding-top:0px;
+    font-family: "Poppins-reg";
+    font-size: 30px;
+    font-weight: 100;
+    margin-bottom: 0px
+}
+  .highlights{
+    display:flex;
+    flex-direction: column;
+  }
+  .page-title {
+    Width: 100%;
+    padding-bottom: 20px;
+    text-align: center;
+  }
+  .author-highlight{
+    width:100%;
+    height: 300px;
+    overflow:scroll;
+    border-left: 0px solid black;
+    padding-left:15px;
+    padding-top: 40px;
+  }
+  .book-highlights{
+    width:70%;
+  }
+.grid-container{
+    display:grid;
+    column-gap:10px;
+}
+.row {
+    display: flex;
+    flex-direction: column ;
+    padding: 0 4px;
+  }
+  .column {
+    flex: 0;
+    max-width: 100%;
+    padding: 5px 5px;
+  }
+  
+  .column img {
+    margin-top: 8px;
+    vertical-align: middle;
+    /* width: 100%; */
+  }
+  .grid-item {
+    /* width: 250px;
+    height:250px; */
+  }
+  .grid-image{
+    width: 275px;
+    height:385px; 
+  } 
+}
+
+/* Footer */
+@media only screen and (max-width: 400px) {
+  .footer-content {
+    display: flex;
+    flex-direction:column;
+    justify-content: space-between;
+    align-content: center;
+    margin: 0px 20px;
+    text-align: center;
+  }
+  .social-icon-container a img {
+    height: 40px;
+    width: 40px;
+  }
+  .social-icon-container a {
+    text-decoration: none;
+    text-align:center;
+    margin: auto;
+  }
+
+  .social-icon-container {
+    order: 1;
+    text-align:center;
+    /* position:relative; */
+    /* left: 0; */
+    /* right: 0; */
+    /* margin: 0 0 20px 0; */
+    /* width: 100%; */
+    padding-bottom: 10px;
+    margin: auto;
+    width: 50%;
+  }
+  .social-media-icons{
+    display:inline-flex;
+  }
+  .footer-link-container {
+    order: 2;
+    display: flex;
+    flex-direction:column;
+    width: 50%;
+    margin: auto;
+    padding-bottom: 10px;
+    padding-top:0px;
+  }
+  .footer-link-container a {
+    text-decoration: none;
+    color:#000000;
+    padding-right: 10px;
+    
+   
+  }
+ .copyright-container {
+    order: 3;
+    width: 50%;
+    margin: auto;
+ 
+ }
+  .copyright-container a {
+    text-decoration: none;
+    color: black;
+    float: right;
+    padding-top: 0px;
+  }
+  .follow-us-text {
+    color: black;
+  }
+
+}
