--- a/assets/stylesheets/monthlyhighlights.css
+++ b/assets/stylesheets/monthlyhighlights.css
@@ -136,10 +136,15 @@ width: 40px;
   .author-highlight{
     width:30%;
     height: 530px;
-    overflow:scroll;
+    overflow:hidden;
     border-left: 1px solid black;
     padding-left:15px;
 
+  }
+  .scroll{
+    width:100%;
+    height: 530px;
+    overflow:scroll;
   }
   .book-highlights{
     width:70%;
@@ -155,7 +160,7 @@ width: 40px;
   }
   .column {
     flex: 25%;
-    max-width: 17.5%;
+    max-width: 16%;
     padding: 5px 5px;
   }
   
@@ -295,11 +300,18 @@ background-color: #ffffff;
   .author-highlight{
     width:100%;
     height: 300px;
-    overflow:scroll;
+    overflow:hidden;
     border-left: 0px solid black;
     padding-left:15px;
     padding-top: 40px;
+
   }
+  .scroll{
+    width:100%;
+    height: 300px;
+    overflow:scroll;
+  }
+
   .book-highlights{
     width:70%;
   }
@@ -315,7 +327,7 @@ background-color: #ffffff;
   .column {
     flex: 0;
     max-width: 100%;
-    padding: 5px 5px;
+    padding: 0px 0px;
   }
   
   .column img {
